--- a/.github/workflows/post-to-qiita.yml
+++ b/.github/workflows/post-to-qiita.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Qiitaに投稿
         run: |
-          for file in Zenn&Qiita/publish/*.md; do
+          for file in "Zenn&Qiita/publish/"*.md; do
             if grep -q "publish: true" "$file"; then  # publish: true のものだけ投稿
               TITLE=$(grep "^title: " "$file" | cut -d'"' -f2) # titleを取得
               BODY=$(tail -n +5 "$file") # メタデータを除いた本文
