--- a/.github/workflows/post-to-qiita.yml
+++ b/.github/workflows/post-to-qiita.yml
@@ -15,18 +15,35 @@ jobs:
       - name: 必要なツールをインストール (jq)
         run: sudo apt-get install -y jq
 
-      - name: Qiitaに投稿
+      - name: Qiitaに投稿（新規 or 更新）
         run: |
           for file in "Zenn&Qiita/publish/"*.md; do
             if grep -q "publish: true" "$file"; then  # publish: true のものだけ投稿
               TITLE=$(grep "^title: " "$file" | cut -d'"' -f2) # titleを取得
               BODY=$(tail -n +5 "$file") # メタデータを除いた本文
+              ARTICLE_ID=$(grep "^qiita_id: " "$file" | cut -d' ' -f2) # 記事IDを取得
+              
               JSON_PAYLOAD=$(jq -n --arg title "$TITLE" --arg body "$BODY" \
                 '{title: $title, body: $body, tags: [{name: "技術"}], private: false}')
 
-              curl -X POST "https://qiita.com/api/v2/items" \
-                -H "Authorization: Bearer ${{ secrets.QIITA_TOKEN }}" \
-                -H "Content-Type: application/json" \
-                -d "$JSON_PAYLOAD"
+              if [ -z "$ARTICLE_ID" ]; then
+                # 記事 ID がない場合は新規投稿
+                RESPONSE=$(curl -s -X POST "https://qiita.com/api/v2/items" \
+                  -H "Authorization: Bearer ${{ secrets.QIITA_TOKEN }}" \
+                  -H "Content-Type: application/json" \
+                  -d "$JSON_PAYLOAD")
+                
+                # 記事 ID を取得して Obsidian のファイルに保存
+                NEW_ID=$(echo $RESPONSE | jq -r '.id')
+                if [ "$NEW_ID" != "null" ]; then
+                  echo "qiita_id: $NEW_ID" >> "$file"
+                fi
+              else
+                # 記事 ID がある場合は更新
+                curl -X PUT "https://qiita.com/api/v2/items/$ARTICLE_ID" \
+                  -H "Authorization: Bearer ${{ secrets.QIITA_TOKEN }}" \
+                  -H "Content-Type: application/json" \
+                  -d "$JSON_PAYLOAD"
+              fi
             fi
           done
