--- a/.github/workflows/post-to-qiita.yml
+++ b/.github/workflows/post-to-qiita.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Qiitaに投稿（新規 or 更新）
         run: |
-          for file in "Zenn*/publish/"*.md; do
+          for file in Zenn*/publish/*.md; do
             if grep -q "publish: true" "$file"; then  # publish: true のものだけ投稿
               TITLE=$(grep "^title: " "$file" | cut -d'"' -f2) # titleを取得
               BODY=$(tail -n +5 "$file") # メタデータを除いた本文
@@ -36,6 +36,7 @@ jobs:
                 # 記事 ID を取得して Obsidian のファイルに保存
                 NEW_ID=$(echo "$RESPONSE" | jq -r '.id')
                 if [ "$NEW_ID" != "null" ]; then
+                  echo "" >> "$file"  # 改行を追加（ファイルの最後に追加するため）
                   echo "qiita_id: $NEW_ID" >> "$file"
                   echo "記事ID $NEW_ID を保存しました"
                 fi
@@ -53,6 +54,6 @@ jobs:
         run: |
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
-          git add "Zenn&Qiita/publish/"*.md
-          git commit -m "記事IDを追加"
-          git push origin main || echo "No changes to commit"
+          git add Zenn*/publish/*.md
+          git commit -m "記事IDを追加" || echo "No changes to commit"
+          git push origin main --force
